<resources>
    <string name="app_name">Glyder</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_sign_in_short">SIGN IN</string>
    <string name="shop_now">Shop Now</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="registration">REGISTRATION</string>
    <string name="prompt_email_registration">Email (User Name)</string>
    <string name="registrantionbtn">CREATE ACCOUNT</string>
    <string name="title_activity_splash_screen">GLYDER</string>
    <string name="login">LOGIN</string>
    <string name="registered">REGISTER</string>
    <string name="infoText">Glyder</string>
    <string name="infoTextAccept">Accept terms and conditions</string>
    <string name="title_activity_register">REGISTER</string>
    <string name="ghosttextcard">XXXX</string>
    <string name="state_s">Select State</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="ok">OK</string>

    <string name="title_activity_fullscreen">Scan Barcode</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
